z-index + collapse button fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,11 @@ body {
 
 /*-------------------------------------------- Header */
 
-header {
-    z-index: 1;
-}
 
 nav.navbar.navbar-inverse {
     position: fixed;
     width: 100vw;
+    z-index:1;
 }
 
 .navbar-inverse {
@@ -138,19 +136,24 @@ footer {
     background-size: cover;
 
     height: 100vh;
+    width: 100vw;
     color: #f5f5f5;
-    text-align: center;
-    display: flex;
-    align-items: center;
-
-    z-index: 0;
+    
 
 }
 
-.first-header {
+.home-header {
+    font-size: 30px;
     text-shadow: 10px 0 15px black;
     text-transform: uppercase;
-    z-index: 0;
+    margin: 20px auto 10px;
+    padding-bottom: 10px;
+}
+
+.wrapper-center {
+    margin-top: 50vh;
+    transform: translateY(-50%);
+    text-align: center;
 }
 
 
@@ -170,24 +173,40 @@ footer {
 
     text-align: center;
     height: 100vh;
+    width: 100vw;
     color: #f5f5f5;
-
-    z-index: 0;
 
 }
 
+.services-header {
+    font-size: 30px;
+    text-shadow: 10px 0 15px black;
+    text-transform: uppercase;
+    margin: 20px auto 10px;
+    padding-bottom: 10px
+}
+
 .box-set {
-    padding: 5px 0;
-    margin: 5px;
     background-color: #f5f5f5;
     color: #777;
     border-radius: 15px;
+    opacity: 0.85;
+    align-items: center;
+    margin-bottom: 10px;
+    transition: all .3s ease-in;
+    -moz-transition: all .3s ease-in;
+    -webkit-transition: all .3s ease-in;
+}
+
+.box-set:hover {
+    opacity: 1;
 }
 
 /*-------------------------------------------- Section 3 - Docor */
 
 .doctor-page {
     height: 100vh;
+    width: 100vw;
 
 }
 
@@ -195,6 +214,7 @@ footer {
 
 .about-page {
     height: 100vh;
+    width: 100vw;
     background-color: #ddd;
 
 }
@@ -210,12 +230,9 @@ footer {
     background-size: cover;
 
     height: 100vh;
+    width: 100vw;
     color: #f5f5f5;
     text-align: center;
-
-    z-index: 0;
-
-    margin-top: 0px;
 
 }
 
@@ -224,13 +241,22 @@ footer {
     height: 100vh;
 }
 
-.form-valign {
-    padding-top: 10%;
-}
-
 .center-form {
     width: 100%;
 }
+
+.wrapper-form {
+    margin-top: 15vh;
+}
+
+.contact-header {
+    font-size: 30px;
+    text-shadow: 10px 0 15px black;
+    text-transform: uppercase;
+    margin: 20px auto 10px;
+    padding-bottom: 10px
+}
+
 
 .center-form form input,
 .center-form form textarea,
